@@ -2,8 +2,10 @@ devscripts (2.10.3) UNRELEASED; urgency=low
 
   * licensecheck: New script to determine which license(s) source files
     are under (Closes: #382148)
+  * bts: Add claim / unclaim support, based on a patch by zobel
+    (Closes: #385957)
 
- -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Tue, 27 Mar 2007 23:17:44 +0100
+ -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Thu, 29 Mar 2007 22:30:06 +0100
 
 devscripts (2.10.2) unstable; urgency=low
 
